# haskell-sexpr-to-json

./: .gitignore  LICENSE  README.md
back/: Dockerfile  build  docker-compose.yml  sexpr-to-json.cabal  sexpr2json  sexpr2json.cabal  start
back/examples/: example1.sexpr  example1error.sexpr  example2.sexpr  example2error.sexpr  example3.sexpr  example3error.sexpr  example4.sexpr  example4error.sexpr  example5.sexpr  example5error.sexpr
back/src/: Main.hs
front/: .env  index.html  package-lock.json  package.json  vite.config.js
front/src/: App.jsx  main.jsx
