name:                sexpr-to-json
version:             1.0
cabal-version:       >=1.10
build-type:          Simple

executable my-haskell-app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , text
                     , bytestring
                     , wai-cors
                     , http-types
  hs-source-dirs:      src
  default-language:    Haskell2010
